(lang dune 2.6)

(name numbers)

(generate_opam_files true)

(source
 (github patricoferris/explore))

(license ISC)

(authors "Patrick Ferris")

(maintainers "pf341@patricoferris.com")

(package
 (name numbers)
 (synopsis "Explore OCaml Sources - Documentation Example")
 (description
   "Using odoc to generate documentation for a small numbers package")
 (depends
  (ocaml
   (and
    (>= 4.10.0)
    (< 4.11.0)))))
